@@ -1,4 +1,4 @@
-\input texinfo @c -*-texinfo-*-
+b\input texinfo @c -*-texinfo-*-
 @c %**start of header
 @setfilename gdk.info
 @settitle GDK
